--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,10 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;}
 
-    p, h1,h2,h3,h4,h5,h6 {
-        margin-top: 0;
-        margin-bottom: 0;
-    }
+p, h1,h2,h3,h4,h5,h6 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
 
 a {
     text-decoration: none;
@@ -85,7 +85,8 @@ section {
     gap: 40px;
 }
 
-.list-navigation-studio {
+.list-navigation-studio,
+.modal-title {
     color: #2E2F42;
     font-weight: 500;
 }
@@ -96,8 +97,8 @@ section {
     padding: 24px 0;
     position: relative;
     transition-property: color;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list-navigation-studio:hover,
@@ -130,7 +131,8 @@ address {
     color: #434455;
     transition-property: color;
     transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-timing-function: 
+    cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .links-address:hover,
@@ -190,6 +192,7 @@ address {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .button-hero:hover,
 .button-hero:focus {
     background-color: #404BBF;
@@ -457,4 +460,267 @@ address {
 .footer-social-link:hover,
 .footer-social-link:focus {
     background-color: #31D0AA;
+}
+
+.footer-column-third {
+    margin-left: 80px;
+}
+
+.footer-form-wrap {
+    display: flex;
+    gap: 24px;
+}
+
+.footer-input {
+    width: 260px;
+    height: 40px;
+    border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    background-color: transparent;
+    font-family: inherit;
+    font-size: 12px;
+    color: #FFFFFF;
+    padding: 8px 0 8px 16px;
+}
+
+.footer-input::placeholder {
+    color: #FFFFFF;
+    font-size: 12px;
+}
+
+.footer-form-button {
+    color: #FFF;
+    background-color: #4D5AE5;
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 8px 24px;
+    border-radius: 4px;
+    border: none;
+    display: block;
+    min-width: 165px;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form-button:hover,
+.footer-form-button:focus {
+    background-color: #404BBF;
+    cursor: pointer;
+}
+
+.footer-form-icon {
+    margin-left: 16px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+
+/** Backdrop--------------------------------------------*/
+
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: all;
+}
+
+.modal {
+    width: 408px;
+    min-height: 584px;
+    background-color: #fafafa;
+    border-radius: 4px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 24px;
+    letter-spacing: 0.04em;
+}
+
+.modal-close {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    cursor: pointer;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: #E7E9FC;
+    border: 1px solid #2E2F42;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function:
+        cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:hover,
+.modal-close:focus {
+    background-color: #404BBF;
+}
+
+.modal-title {
+    text-align: center;
+    margin-top: 48px;
+    margin-bottom: 16px;
+    color: #2E2F42;
+    letter-spacing: 0.02em;
+}
+
+.modal-field {
+    margin-bottom: 8px;
+}
+
+.modal-label {
+    display: block;
+    padding-top: 8px;
+    padding-bottom: 4px;
+    font-size: 12px;
+    color: rgb(142, 143, 153);
+}
+
+.modal-input-wrap {
+    position: relative;
+}
+
+.modal-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    padding: 8px 0px 8px 38px;
+    outline: transparent;
+    font-family: inherit;
+    transition-property: border-color;
+    transition-duration: 250ms;
+    transition-timing-function:
+        cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+    border-color:#4D5AE5;
+}
+
+.modal-input:focus + .modal-icon {
+    fill: #4D5AE5;
+}
+
+.modal-icon {
+    fill: #2E2F42;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 16px;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function:
+            cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.modal-textarea {
+    width: 100%;
+    height: 120px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    padding: 8px 0px 8px 16px;
+    outline: transparent;
+    font-family: inherit;
+    resize: none;
+    transition-property: border-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-textarea:focus {
+    border-color: #4D5AE5;
+}
+
+.modal-textarea::placeholder {
+    color: rgba(46, 47, 66, 0.4);
+    font-size: 12px;
+}
+
+.modal-field-policy {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 8px;
+    
+}
+
+.label-checkbox {
+    display: flex;
+    align-items: center;
+}
+
+.label-checkbox span {
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    margin-right: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+}
+
+.modal-checkbox:checked + .label-checkbox span {
+    background-color: #404BBF;
+    border: none;
+    fill: #F4F4FD
+}
+
+.link-policy {
+    text-decoration: underline;
+    color: #4d5ae5;
+    letter-spacing: 0.04em;}
+
+.modal-button {
+    color: #FFF;
+    background-color: #4D5AE5;
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 16px 32px;
+    border-radius: 4px;
+    border: none;
+    display: block;
+    min-width: 169px;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button:hover,
+.modal-button:focus {
+    background-color: #404BBF;
+    cursor: pointer;
 }
