--- a/css/styles.css
+++ b/css/styles.css
@@ -559,7 +559,7 @@ address {
     transition: transform 250ms 
     cubic-bezier(0.4, 0, 0.2, 1);
     transform: translate(-50%, -50%);
-    padding: 24px;
+    padding: 72px 24px 24px 24px;
     letter-spacing: 0.04em;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 
     0px 1px 3px rgba(0, 0, 0, 0.12), 
@@ -590,12 +590,13 @@ address {
 .modal-close:focus {
     background-color: #404BBF;
     border: none;
+    fill: #ffffff
 }
 
-.icon-backdrop-close {
-    transition: fill 250ms 
-    cubic-bezier(0.4, 0, 0.2, 1);}
-
+.icon-backdrop-close:hover,
+.icon-backdrop-close:focus {
+    fill: #ffffff
+}
 
 .modal-title {
     text-align: center;
@@ -606,7 +607,7 @@ address {
 }
 
 .modal-field {
-    margin-bottom: 8px;
+    margin-bottom: 16px
 }
 
 .modal-label {
@@ -615,6 +616,8 @@ address {
     margin-bottom: 4px;
     font-size: 12px;
     color: rgb(142, 143, 153);
+    line-height: 1.17;
+    letter-spacing: 0.04em;
 }
 
 .modal-input-wrap {
@@ -715,6 +718,10 @@ address {
     cubic-bezier(0.4, 0, 0.2, 1), 
     border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-span-checkbox {
+    display: inline-flex;
 }
 
 .modal-checkbox:checked + .label-checkbox span {
