--- a/css/styles.css
+++ b/css/styles.css
@@ -472,7 +472,7 @@ address {
 }
 
 .footer-input {
-    width: 260px;
+    width: 264px;
     height: 40px;
     border: 1px solid #FFFFFF;
     border-radius: 4px;
@@ -492,20 +492,22 @@ address {
 }
 
 .footer-form-button {
+    height: 40px;
+    min-width: 165px;
     color: #FFF;
     background-color: #4D5AE5;
+    cursor: pointer;
     font-family: inherit;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    margin-right: auto;
-    margin-left: auto;
     padding: 8px 24px;
     border-radius: 4px;
     border: none;
-    display: block;
-    min-width: 165px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -593,6 +595,11 @@ address {
     fill: #ffffff
 }
 
+.icon-backdrop-close {
+    transition: fill 250ms 
+    cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .icon-backdrop-close:hover,
 .icon-backdrop-close:focus {
     fill: #ffffff
@@ -600,14 +607,13 @@ address {
 
 .modal-title {
     text-align: center;
-    margin-top: 48px;
     margin-bottom: 16px;
     color: #2E2F42;
     letter-spacing: 0.02em;
 }
 
 .modal-field {
-    margin-bottom: 16px
+    margin-bottom: 8px;
 }
 
 .modal-label {
@@ -718,10 +724,6 @@ address {
     cubic-bezier(0.4, 0, 0.2, 1), 
     border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-span-checkbox {
-    display: inline-flex;
 }
 
 .modal-checkbox:checked + .label-checkbox span {
