--- a/css/styles.css
+++ b/css/styles.css
@@ -616,7 +616,7 @@ address {
     margin-bottom: 8px;
 }
 
-.modal-field-second {
+.modal-field-comment {
     margin-bottom: 16px;
 }
 
@@ -667,7 +667,6 @@ address {
     transition-duration: 250ms;
     transition-timing-function:
             cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .modal-textarea {
@@ -708,7 +707,7 @@ address {
 }
 
 .label-checkbox {
-    display: flex;
+    display: block;
     align-items: center;
     line-height: 1.17;
     letter-spacing: 0.04em;
